search feature added