@@ -3,6 +3,7 @@ package com.chiku.dist.dmsrest.document;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,7 +18,35 @@ public class DocumentService {
 	}
 
 	public List<Document> getDocumentList(String number) {
-		return documentRepository.findAll().stream().filter(f -> f.getNumber().equals(number)).collect(Collectors.toList());
+		return documentRepository.findAll().stream().filter(f -> f.getNumber().equals(number)).toList();
+	}
+
+	public List<Document> getDocumentListByFullText(String text) {
+
+		if(text.equals("ALL") || text.equals("")){
+			return documentRepository.findAll();
+		}
+
+		return documentRepository.findAll().stream().filter(f -> f.getObjectNumber().equals(text)
+				|| f.getCategory().contains(text)
+				|| f.getDocName().contains(text)
+				|| f.getScreen().equals(text)
+				|| f.getSubject().contains(text)
+		).toList();
+	}
+
+	public List<Document> getDocumentListByTextAndType(String text, String type) {
+		switch (type) {
+			case "objectType":
+				return documentRepository.findAll().stream().filter(f -> f.getScreen().equals(text)
+				).collect(Collectors.toList());
+		}
+		return documentRepository.findAll().stream().filter(f -> f.getObjectNumber().equals(text)
+				|| f.getCategory().contains(text)
+				|| f.getDocName().contains(text)
+				|| f.getScreen().equals(text)
+				|| f.getSubject().contains(text)
+		).toList();
 	}
 
 	public void addNewDocument(Document document) {
